--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <img src="imagens/entrada.jpg" alt="Entrada GEP Restaurante" class="header-img">
   </header>
 
-  <!-- Barra de navegação fixa -->
+  <!-- Barra de navegação fixa após header -->
   <nav class="navbar">
     <div class="logo">
-      <img src="imagens/gep.logo.jpg" alt="Logo GEP Restaurante">
+      <!-- Logo aponta para o index -->
+      <a href="index.html">
+        <img src="imagens/gep.logo.jpg" alt="Logo GEP Restaurante">
+      </a>
     </div>
     <ul class="nav-links">
       <li><a href="#menu">Menu</a></li>
@@ -33,31 +36,43 @@
     <section class="ambiente">
       <h2>Ambiente GEP</h2>
       <div class="galeria">
+	  
+		<img src="imagens/restaurante8.jpg" alt="Ambiente 8">
         <img src="imagens/restaurante1.jpg" alt="Ambiente 1">
         <img src="imagens/restaurante2.jpg" alt="Ambiente 2">
         <img src="imagens/restaurante3.jpg" alt="Ambiente 3">
-		<img src="imagens/restaurante4.jpg" alt="Ambiente 4">
-        <img src="imagens/restaurante5.jpg" alt="Ambiente 2">
-        <img src="imagens/restaurante6.jpg" alt="Ambiente 3">
-		<img src="imagens/restaurante7.jpg" alt="Ambiente 1">
-        <img src="imagens/restaurante8.jpg" alt="Ambiente 2">
-        <img src="imagens/restaurante9.jpg" alt="Ambiente 3"><img src="imagens/restaurante1.jpg" alt="Ambiente 1">
-        <img src="imagens/restaurante10.jpg" alt="Ambiente 2">
-        <img src="imagens/restaurante11.jpg" alt="Ambiente 3"><img src="imagens/restaurante1.jpg" alt="Ambiente 1">
-        <img src="imagens/restaurante12.jpg" alt="Ambiente 2">
-        <img src="imagens/restaurante13.jpg" alt="Ambiente 3">
+        <img src="imagens/restaurante4.jpg" alt="Ambiente 4">
+        <img src="imagens/restaurante5.jpg" alt="Ambiente 5">
+        <img src="imagens/restaurante6.jpg" alt="Ambiente 6">
+		<img src="imagens/restaurante7.jpg" alt="Ambiente 7">        
+        <img src="imagens/restaurante9.jpg" alt="Ambiente 9">
+		<img src="imagens/restaurante10.jpg" alt="Ambiente 10">
+		
+		
+		
+		
       </div>
     </section>
 
-    
+    <!-- Menu -->
+    <section id="menu">
+      <h2>Nosso Menu</h2>
+      <!-- Aqui entram os blocos de vinhos, licores, cognacs, shots, gin, aguardente, sangrias, cervejas -->
+    </section>
 
-    
+    <!-- Eventos -->
+    <section id="eventos">
+      <h2>Eventos</h2>
+      <p>Descobre os eventos especiais e noites temáticas do GEP Restaurante.</p>
+      <button class="btn-eventos">Ver Agenda</button>
+    </section>
 
     <!-- Contactos -->
     <section id="contactos">
       <h2>Contactos</h2>
-      <p>📍 Centralidade Kilamba - G15 Aberto de Segunda a Domingo, das 8h as 22h. Entrega ao domicílio das 10h as 21h30</p>
+      <p>📍 Centralidade Kilamba - G15 Aberto de Segunda a Domingo, das 8h às 22h. Entrega ao domicílio das 10h às 21h30</p>
       <p>📞 Telefone: +244 933 813 082</p>
+	  <p>📞 Reservas: +244 997 237 124</p>
       <p>📧 Email: geprestaurantegrill@hotmail.com</p>
     </section>
   </main>
@@ -65,6 +80,10 @@
   <!-- Footer -->
   <footer>
     <p>&copy; 2026 GEP Restaurante | Since 2018</p>
+    <p>
+      <a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a> | 
+      <a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a>
+    </p>
   </footer>
 
 </body>
