--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Barra de navegação fixa após header -->
   <nav class="navbar">
     <div class="logo">
-      <!-- Logo aponta para o index -->
+      <!-- Logo aponta para index -->
       <a href="index.html">
         <img src="imagens/gep.logo.jpg" alt="Logo GEP Restaurante">
       </a>
@@ -36,21 +36,12 @@
     <section class="ambiente">
       <h2>Ambiente GEP</h2>
       <div class="galeria">
-	  
-		<img src="imagens/restaurante8.jpg" alt="Ambiente 8">
         <img src="imagens/restaurante1.jpg" alt="Ambiente 1">
         <img src="imagens/restaurante2.jpg" alt="Ambiente 2">
         <img src="imagens/restaurante3.jpg" alt="Ambiente 3">
         <img src="imagens/restaurante4.jpg" alt="Ambiente 4">
         <img src="imagens/restaurante5.jpg" alt="Ambiente 5">
         <img src="imagens/restaurante6.jpg" alt="Ambiente 6">
-		<img src="imagens/restaurante7.jpg" alt="Ambiente 7">        
-        <img src="imagens/restaurante9.jpg" alt="Ambiente 9">
-		<img src="imagens/restaurante10.jpg" alt="Ambiente 10">
-		
-		
-		
-		
       </div>
     </section>
 
@@ -72,7 +63,6 @@
       <h2>Contactos</h2>
       <p>📍 Centralidade Kilamba - G15 Aberto de Segunda a Domingo, das 8h às 22h. Entrega ao domicílio das 10h às 21h30</p>
       <p>📞 Telefone: +244 933 813 082</p>
-	  <p>📞 Reservas: +244 997 237 124</p>
       <p>📧 Email: geprestaurantegrill@hotmail.com</p>
     </section>
   </main>
