--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
   <!-- Main com fotos do ambiente -->
   <main>
+  
     <section class="ambiente">
       <h2>Ambiente GEP</h2>
       <div class="galeria">
@@ -66,6 +67,7 @@
       <p>📧 Email: geprestaurantegrill@hotmail.com</p>
     </section>
   </main>
+   
 
   <!-- Footer -->
   <footer>
@@ -75,6 +77,42 @@
       <a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a>
     </p>
   </footer>
+  
+  <!-- Lightbox -->
+<div id="lightbox" class="lightbox">
+  <span class="close">&times;</span>
+  <img class="lightbox-img" src="" alt="">
+  <div class="caption"></div>
+</div>
+  
+  <script>
+  // Seleciona elementos
+  const lightbox = document.getElementById('lightbox');
+  const lightboxImg = document.querySelector('.lightbox-img');
+  const caption = document.querySelector('.caption');
+  const closeBtn = document.querySelector('.close');
+
+  // Adiciona evento a todas imagens do main
+  document.querySelectorAll('main img').forEach(img => {
+    img.addEventListener('click', () => {
+      lightbox.style.display = 'flex';
+      lightboxImg.src = img.src;
+      caption.textContent = img.alt; // usa o alt como detalhe
+    });
+  });
+
+  // Fecha ao clicar no botão X
+  closeBtn.addEventListener('click', () => {
+    lightbox.style.display = 'none';
+  });
+
+  // Fecha ao clicar fora da imagem
+  lightbox.addEventListener('click', (e) => {
+    if (e.target === lightbox) {
+      lightbox.style.display = 'none';
+    }
+  });
+</script>
 
 </body>
 </html>
