--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   </nav>
 
   <!-- Main com fotos do ambiente -->
+  
   <main>
     <section class="ambiente">
       <h2>Ambiente GEP</h2>
@@ -58,27 +59,18 @@
 		<img src="imagens/restaurante7.jpg" alt="Ambiente 7">        
         <img src="imagens/restaurante9.jpg" alt="Ambiente 9">
 		<img src="imagens/restaurante10.jpg" alt="Ambiente 10">
+		
 
       </div>
     </section>
 
-    <!-- Menu -->
-    <section id="menu">
-      <h2>Nosso Menu</h2>
-    </section>
-
-    <!-- Eventos -->
-    <section id="eventos">
-      <h2>Eventos</h2>
-      <p>Descobre os eventos especiais e noites temáticas do GEP Restaurante.</p>
-      <button class="btn-eventos">Ver Agenda</button>
-    </section>
-
+   
     <!-- Contactos -->
     <section id="contactos">
       <h2>Contactos</h2>
       <p>📍 Centralidade Kilamba - G15 Aberto de Segunda a Domingo, das 8h às 22h. Entrega ao domicílio das 10h às 21h30</p>
       <p>📞 Telefone: +244 933 813 082</p>
+	  <p>📞 Reservas: +244 997 237 124</p>
       <p>📧 Email: geprestaurantegrill@hotmail.com</p>
     </section>
   </main>
