--- a/index.html
+++ b/index.html
@@ -14,34 +14,43 @@
   </header>
 
   <!-- Barra de navegação -->
-  <nav class="navbar">
-    <div class="logo">
-      <a href="index.html">
-        <img src="imagens/gep.logo.jpg" alt="Logo GEP Restaurante">
+<nav class="navbar">
+  <div class="logo">
+    <a href="index.html">
+      <img src="imagens/gep.logo.jpg" alt="Logo GEP Restaurante">
+    </a>
+  </div>
+
+  <!-- Botão Opções (mobile) -->
+  <button class="menu-toggle">Opções ☰</button>
+
+  <!-- Links desktop -->
+  <ul class="nav-links">
+    <li><a href="#menu">Menu</a></li>
+    <li><a href="#eventos">Eventos</a></li>
+    <li><a href="#contactos">Contactos</a></li>
+    <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+    <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+    <li><a href="https://wa.me/244923281469" target="_blank" rel="noopener noreferrer"> <img src="imagens/whatsapp-logo.jpg" alt="WhatsApp" style="height:18px;vertical-align:middle;margin-right:6px;">Posso ajudar?</a>
+    </li>
+  </ul>
+
+  <!-- Menu mobile -->
+  <ul class="mobile-menu">
+    <li><a href="#menu">Menu</a></li>
+    <li><a href="#eventos">Eventos</a></li>
+    <li><a href="#contactos">Contactos</a></li>
+    <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+    <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+    <!-- Botão WhatsApp mobile -->
+    <li>
+      <a href="https://wa.me/244923281469" target="_blank" rel="noopener noreferrer">
+        <img src="imagens/whatsapp-logo.jpg" alt="WhatsApp" style="height:18px;vertical-align:middle;margin-right:6px;">
+        Posso ajudar?
       </a>
-    </div>
-
-    <!-- Botão Opções (mobile) -->
-    <button class="menu-toggle">Opções ☰</button>
-
-    <!-- Links desktop -->
-    <ul class="nav-links">
-      <li><a href="#menu">Menu</a></li>
-      <li><a href="#eventos">Eventos</a></li>
-      <li><a href="#contactos">Contactos</a></li>
-      <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-      <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-    </ul>
-
-    <!-- Menu mobile -->
-    <ul class="mobile-menu">
-      <li><a href="#menu">Menu</a></li>
-      <li><a href="#eventos">Eventos</a></li>
-      <li><a href="#contactos">Contactos</a></li>
-      <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-      <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-    </ul>
-  </nav>
+    </li>
+  </ul>
+</nav>
 
   <!-- Main com fotos do ambiente -->
   
@@ -83,6 +92,7 @@
     <p>
       <a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a> | 
       <a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a>
+	  <a href="https://wa.me/244923281469" target="_blank" rel="noopener noreferrer"> <img src="imagens/whatsapp-logo.jpg" alt="WhatsApp" style="height:18px;vertical-align:middle;margin-right:6px;">Posso ajudar?</a>
     </p>
   </footer>
 
