--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <p>
       <a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a> | 
       <a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a>
-	  <a href="https://wa.me/244923281469" target="_blank" rel="noopener noreferrer"> <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">Posso ajudar?</a>
+	  <a href="https://wa.me/244923281469" target="_blank" rel="noopener noreferrer"> <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;"></a>
     </p>
   </footer>
 
@@ -157,3 +157,4 @@
 
 </body>
 </html>
+
