--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GEP Restaurante</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Favicon (logo da GEP) -->
+  <link rel="icon" type="image/png" href="imagens/gep.logo.jpg">
+
 </head>
 <body>
 
@@ -13,7 +16,7 @@
     <img src="imagens/entrada.jpg" alt="Entrada GEP Restaurante" class="header-img">
   </header>
 
-  <!-- Barra de navegação -->
+<!-- Barra de navegação -->
 <nav class="navbar">
   <div class="logo">
     <a href="index.html">
@@ -26,26 +29,34 @@
 
   <!-- Links desktop -->
   <ul class="nav-links">
-    <li><a href="#menu">Menu</a></li>
-    <li><a href="#eventos">Eventos</a></li>
-    <li><a href="#contactos">Contactos</a></li>
+    <li><a href="menu.html">Menu</a></li>
+	 <li><a href="encomendas.html">Encomendas</a></li>
+    <li><a href="eventos.html">Eventos</a></li>
+    <li><a href="contactos.html">Contactos</a></li>   
     <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
     <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-    <li><a href="https://wa.me/244923281469" target="_blank" rel="noopener noreferrer"> <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">Posso ajudar?</a>
+    <li>
+      <a href="https://wa.me/244923281469" target="_blank" rel="noopener noreferrer">
+        <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">
+        Posso ajudar?
+      </a>
     </li>
   </ul>
 
   <!-- Menu mobile -->
   <ul class="mobile-menu">
-    <li><a href="#menu">Menu</a></li>
-    <li><a href="#eventos">Eventos</a></li>
-    <li><a href="#contactos">Contactos</a></li>
+    <li><a href="menu.html">Menu</a></li>
+    <li><a href="eventos.html">Eventos</a></li>
+    <li><a href="contactos.html">Contactos</a></li>
+    <li><a href="encomendas.html">Encomendas</a></li>
     <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
     <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a></li>
     <!-- Botão WhatsApp mobile -->
     <li>
       <a href="https://wa.me/244923281469" target="_blank" rel="noopener noreferrer">
-        <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;"></a>
+        <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">
+        Posso ajudar?
+      </a>
     </li>
   </ul>
 </nav>
@@ -157,4 +168,3 @@
 
 </body>
 </html>
-
