--- a/eventos.html
+++ b/eventos.html
@@ -47,9 +47,7 @@
     <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank">Facebook</a></li>
     <li>
       <a href="https://wa.me/244923281469" target="_blank">
-        <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">
-        Posso ajudar?
-      </a>
+        <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;"></a>
     </li>
   </ul>
 </nav>
@@ -123,3 +121,4 @@
 
 </body>
 </html>
+
